--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
-@import "tailwindcss/tailwind.css";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+body {
+  overflow: auto;
+}
